// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer renders properly 1`] = `
"<v-footer-stub height=\\"auto\\" tag=\\"div\\" tile=\\"true\\" class=\\"hidden-print-only\\"><div class=\\"container-fluid\\"><v-row-stub tag=\\"div\\" nogutters=\\"true\\"><v-col-stub cols=\\"auto\\" tag=\\"div\\"><v-card-stub loaderheight=\\"4\\" tag=\\"div\\" color=\\"transparent\\" flat=\\"true\\"><v-card-text-stub class=\\"text-muted\\"><span>Version: 0.11.19</span>
            |
            <span>Commit: </span> <nuxt-link to=\\"[object Object]\\"><span> a95a529</span></nuxt-link></v-card-text-stub></v-card-stub></v-col-stub> <v-spacer-stub></v-spacer-stub> <v-col-stub cols=\\"auto\\" tag=\\"div\\"><v-card-stub loaderheight=\\"4\\" tag=\\"div\\" color=\\"transparent\\" flat=\\"true\\"><v-card-text-stub class=\\"text-muted\\">This site is protected by reCAPTCHA and the Google
            <a href=\\"https://policies.google.com/privacy\\">Privacy Policy</a>
            and
            <a href=\\"https://policies.google.com/terms\\">Terms of Service</a>
            apply.
          </v-card-text-stub></v-card-stub></v-col-stub></v-row-stub> <v-row-stub tag=\\"div\\" nogutters=\\"true\\"><v-col-stub tag=\\"div\\"><v-card-stub loaderheight=\\"4\\" tag=\\"div\\" color=\\"transparent\\" tile=\\"true\\" flat=\\"true\\"><v-card-text-stub class=\\"py-2 text-left\\"><span>Made with <!----><span>🍝</span> in
              Brisbane, Australia</span><br> <span>© 2015 | PocketPasta</span></v-card-text-stub></v-card-stub></v-col-stub> <v-spacer-stub></v-spacer-stub> <v-col-stub cols=\\"auto\\" tag=\\"div\\"><v-card-stub loaderheight=\\"4\\" tag=\\"div\\" color=\\"transparent\\" tile=\\"true\\" flat=\\"true\\"><v-card-text-stub class=\\"py-2\\"><span>Last modified: Sat, 19 Oct 2019 09:11:49 GMT</span></v-card-text-stub></v-card-stub></v-col-stub></v-row-stub></div></v-footer-stub>"
`;

exports[`Footer renders properly without lastModified 1`] = `
"<v-footer-stub height=\\"auto\\" tag=\\"div\\" tile=\\"true\\" class=\\"hidden-print-only\\"><div class=\\"container-fluid\\"><v-row-stub tag=\\"div\\" nogutters=\\"true\\"><v-col-stub cols=\\"auto\\" tag=\\"div\\"><v-card-stub loaderheight=\\"4\\" tag=\\"div\\" color=\\"transparent\\" flat=\\"true\\"><v-card-text-stub class=\\"text-muted\\"><span>Version: 0.11.19</span>
            |
            <span>Commit: </span> <nuxt-link to=\\"[object Object]\\"><span> a95a529</span></nuxt-link></v-card-text-stub></v-card-stub></v-col-stub> <v-spacer-stub></v-spacer-stub> <v-col-stub cols=\\"auto\\" tag=\\"div\\"><v-card-stub loaderheight=\\"4\\" tag=\\"div\\" color=\\"transparent\\" flat=\\"true\\"><v-card-text-stub class=\\"text-muted\\">This site is protected by reCAPTCHA and the Google
            <a href=\\"https://policies.google.com/privacy\\">Privacy Policy</a>
            and
            <a href=\\"https://policies.google.com/terms\\">Terms of Service</a>
            apply.
          </v-card-text-stub></v-card-stub></v-col-stub></v-row-stub> <v-row-stub tag=\\"div\\" nogutters=\\"true\\"><v-col-stub tag=\\"div\\"><v-card-stub loaderheight=\\"4\\" tag=\\"div\\" color=\\"transparent\\" tile=\\"true\\" flat=\\"true\\"><v-card-text-stub class=\\"py-2 text-left\\"><span>Made with <!----><span>🍝</span> in
              Brisbane, Australia</span><br> <span>© 2015 | PocketPasta</span></v-card-text-stub></v-card-stub></v-col-stub> <v-spacer-stub></v-spacer-stub> <!----></v-row-stub></div></v-footer-stub>"
`;
